--- a/robin_in/package.json
+++ b/robin_in/package.json
@@ -11,6 +11,8 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
+    "recoil-persist": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
